--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 3.5)
 project(test_prec_ctrl CXX)
 
 find_package(Catch2 REQUIRED)
-add_executable(test_prec_ctrl main.cpp double_limit.cpp equivalence.cpp FixedPoint.cpp fixed_numeric.cpp)
+add_executable(test_prec_ctrl main.cpp double_limit.cpp equivalence.cpp FixedPoint.cpp FixedPointComplex.cpp fixed_numeric.cpp)
 target_link_libraries(test_prec_ctrl Catch2::Catch2)
 target_include_directories(test_prec_ctrl PRIVATE ../include)
 target_compile_features(test_prec_ctrl PRIVATE cxx_std_17)
